cmake_minimum_required(VERSION 3.5)
project(dominion)

set(CMAKE_C_COMPILER /usr/local/bin/gcc-5)
set(CMAKE_C_FLAGS "-fprofile-arcs -Wall -ftest-coverage -g")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")

set(SOURCE_FILES playdom.c dominion.c interface.c rngs.c)
add_executable(playdom ${SOURCE_FILES})

add_executable(unittest1 unittest1.c dominion.c interface.c rngs.c)
add_executable(unittest2 unittest2.c dominion.c interface.c rngs.c)
add_executable(unittest3 unittest3.c dominion.c interface.c rngs.c)
add_executable(unittest4 unittest4.c dominion.c interface.c rngs.c)
add_executable(cardtest1 cardtest1.c dominion.c interface.c rngs.c)
add_executable(cardtest2 cardtest2.c dominion.c interface.c rngs.c)
add_executable(cardtest3 cardtest3.c dominion.c interface.c rngs.c)
add_executable(cardtest4 cardtest4.c dominion.c interface.c rngs.c)
add_executable(randomtestadventurer randomtestadventurer.c dominion.c interface.c rngs.c)
add_executable(randomtestcard1 randomtestcard1.c dominion.c interface.c rngs.c)
add_executable(randomtestcard2 randomtestcard2.c dominion.c interface.c rngs.c)
